docs/0.8/_sources/api/gammapy.irf.Background2D.rst.txt
Background2D
============

.. currentmodule:: gammapy.irf

.. autoclass:: Background2D
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Background2D.default_interp_kwargs

   .. rubric:: Methods Summary

   .. autosummary::

      ~Background2D.evaluate
      ~Background2D.from_hdulist
      ~Background2D.from_table
      ~Background2D.integrate_on_energy_range
      ~Background2D.peek
      ~Background2D.plot
      ~Background2D.read
      ~Background2D.to_3d
      ~Background2D.to_fits
      ~Background2D.to_table

   .. rubric:: Attributes Documentation

   .. autoattribute:: default_interp_kwargs

   .. rubric:: Methods Documentation

   .. automethod:: evaluate
   .. automethod:: from_hdulist
   .. automethod:: from_table
   .. automethod:: integrate_on_energy_range
   .. automethod:: peek
   .. automethod:: plot
   .. automethod:: read
   .. automethod:: to_3d
   .. automethod:: to_fits
   .. automethod:: to_table
